--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["arcade>=3.0.2"]
+dependencies = [
+    "arcade>=3.0.2",
+    "pyyaml>=6.0.2",
+]
 
 [tool.mypy]
 strict = true
