--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,9 @@ strict = true
 reportUnknownMemberType = false
 
 [dependency-groups]
-dev = ["mypy>=1.15.0", "pytest>=8.3.4", "pytest-cov>=6.0.0"]
+dev = [
+    "mypy>=1.15.0",
+ "pytest>=8.3.4",
+ "pytest-cov>=6.0.0",
+ "types-pyyaml>=6.0.12.20250402",
+]
