--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "arcade>=3.0.2",
+    "munch>=4.0.0",
     "pyyaml>=6.0.2",
 ]
 
